--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,17 @@
-# OS
-.DS_Store
-*.swp
-*.swo
-*.swl
-*.swm
-*.swn
-.vscode
-.idea
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# Build
-vendor
-.vendor-new
-build
-tools/bin/*
-examples/build/*
-docs/_build
-docs/tutorial
-dist
+# Test binary, build with `go test -c`
+*.test
 
-# Data - ideally these don't exist
-examples/basecoin/app/data
-baseapp/data/*
-client/lcd/keys/*
-client/lcd/statik/statik.go
-mytestnet
-
-# Testing
-coverage.txt
-profile.out
-
-# Vagrant
-.vagrant/
-*.box
-*.log
-vagrant
-
-# IDE
-.idea/
-*.iml
-
-# Graphviz
-dependency-graph.png
-
-# Latex
-*.aux
+# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-*.synctex.gz
+
+.idea
+.vscode
+cmd/gaia/cmd
+go.sum
